# Sentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  test_bug.py
.cursor/: rules
backend/: .dockerignore  .env.example  .env.production  Dockerfile  alembic.ini  fly.toml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/core/: auth.py  database.py  idempotency.py  logging_config.py  middleware.py  rate_limit.py  security.py  timeutil.py
backend/app/models/: database.py  review_output.py  test_output.py
backend/app/observability/: __init__.py  langfuse_client.py
backend/app/prompts/: review_prompts.py  testgen_prompts.py
backend/app/retrieval/: __init__.py  bm25.py  chunker.py  cli.py  context_assembler.py  dense.py  embedder.py  fusion.py  hybrid.py  indexer.py  query_builder.py  repo_walker.py
backend/app/routers/: config_router.py  costs.py  eval_router.py  feedback.py  health.py  prompts.py  repos.py  reviews.py  tests.py  webhook.py
backend/app/services/: cost_guard.py  diff_parser.py  feedback_tracker.py  github_app_token.py  github_client.py  health_intelligence.py  llm_gateway.py  mock_label_anchor.py  orchestrator.py  orchestrator_types.py  pricing.py  review_store.py  test_generator.py
backend/migrations/: env.py
backend/migrations/versions/: 2026_04_21_0000_initial_schema.py
backend/tests/integration/: test_health_integration.py  test_repos_endpoints.py
backend/tests/unit/: test_auth.py  test_config_router.py  test_config_validation.py  test_cost_guard.py  test_costs_aggregate.py  test_diff_parser.py  test_eval_router.py  test_feedback_tracker.py  test_health_intelligence.py  test_idempotency.py  test_langfuse_client.py  test_middleware.py  test_mock_label_anchor.py  test_orchestrator_pipeline.py  test_preview_endpoint.py  test_prompts_router.py  test_repo_walker.py  test_retrieval.py  test_scoring.py  test_static_retriever.py  test_test_generator.py
dashboard/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.mjs  (+5 more)
(+275 files in other folders)
