# pyproject.toml is intentionally tool-config-only.
#
# Runtime dependencies live in ``requirements.txt`` so the install path stays a
# single ``pip install -r requirements.txt`` (matches the Dockerfile and CI).
# Adding a ``[project]`` block here would cause editable installs to wipe out
# pinned versions; we skip it deliberately.

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
# A pragmatic core set: pyflakes (F), pycodestyle (E,W), isort (I), bugbear (B),
# pyupgrade (UP), simplification (SIM), pep8-naming (N), security (S).
select = ["E", "F", "W", "I", "B", "UP", "SIM", "N", "S"]
# Ignored:
#  E501 — handled by formatter
#  B008 — FastAPI uses ``Depends()`` in defaults, which trips B008
#  S101 — asserts are fine in tests; per-file ignore below silences in app/
#  S104 — ``0.0.0.0`` bind is intentional for containerized services
#  S105/S106 — false positives on field names like ``api_key``
#  S311 — pseudo-random use is fine outside crypto contexts
ignore = ["E501", "B008", "S104", "S105", "S106", "S311"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S311"]
"eval/**/*.py"  = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Many SQLAlchemy Column[X] / Pydantic interactions trip false positives.
# We keep mypy as a lightweight sanity check rather than gating CI on it.
warn_unused_ignores = false
warn_redundant_casts = true
exclude = "(migrations/|tests/|eval/scripts/legacy_)"
# Per-module overrides — relax noisy modules where SQLAlchemy column types
# fight Python's static checker. Real bugs would still surface through tests.
[[tool.mypy.overrides]]
module = ["app.routers.*", "app.retrieval.*", "app.services.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:sqlalchemy.*",
]
